network/public/traefik/mlops-wildcard-certificate.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-public
